# Jupyter_pyviz_module

./: .gitignore  README.md  environment.yml  pyproject.toml
data/: reproduce_sherpa_fct.csv  reproduce_sherpa_msr.csv  reproduce_sherpa_sf_msr.csv
notebook/: analysis.ipynb
src/: __init__.py  models.py
src/jupyter_pyviz_module/: __init__.py  models.py
src/jupyter_pyviz_module/plots/: __init__.py  plot_IRAS.py  plot_classification.py  plot_items.py  plot_logistic_regression.py  plot_scenarios.py
src/plots/: __init__.py  plot_IRAS.py  plot_items.py  plot_scenarios.py
