[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jupyter-pyviz-module"
version = "0.1.0"
description = "Visualization tools for ActiWiz/IRAS dataset analysis"
authors = [
  { name="Markus Helej", email="markus.helejl@cern.ch" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scipy",
]
